# jaf-py

./: .env.default  .env.example  .eslintrc.js  .gitignore  404.html  ATTACHMENTS.md  CONTRIBUTING.md  CONVERSION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LANGFUSE_COST_FIX_SUMMARY.md  LICENSE  Makefile  PRODUCTION_READY.md  README.md  REGENERATION_IMPLEMENTATION_REVIEW.md  REGENERATION_INTEGRATION_GUIDE.md  commit.patch  docker-compose.yml  docs.sh  index.html  jest.config.js  llms.txt  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-docs.txt  run_all_tests.py  serve.sh  sitemap.xml  test_checkpoint.py  test_config.py  test_langfuse_trace_propagation.py  test_regeneration.py  test_sensitive_simple.py  test_timeout_functionality.py  test_unified_cross_service_trace.py  test_validation.py  validate_a2a_implementation.py  validate_complete_framework.py  (+1 more)
.claude/agents/: docs-updater.md
.github/workflows/: ci.yml  publish.yml  release.yml
STYLE_GUIDE/: index.html
a2a-api-reference/: index.html
a2a-deployment/: index.html
a2a-examples/: index.html
a2a-protocol/: index.html
a2a-specification/: index.html
adk/: __init__.py  errors.py  types.py
adk-overview/: index.html
adk-schema-validation/: index.html
adk/config/: __init__.py  llm_config.py
adk/providers/: __init__.py  converters.py  llm_service.py
adk/runners/: __init__.py  agent_runner.py  multi_agent.py  types.py
adk/schemas/: __init__.py  types.py  validation.py
adk/security/: __init__.py  sanitization.py  validation.py
adk/sessions/: __init__.py  base.py  functional_operations.py  in_memory.py  postgres.py  redis.py
adk/tests/: test_adk.py  test_integration.py
adk/utils/: __init__.py  safe_evaluator.py
agent-as-tool/: index.html
analytics-system/: index.html
api-reference/: index.html
assets/: extra.css  extra.js
callback-system/: index.html
core-concepts/: index.html
deployment/: index.html
docs/: README.md  STYLE_GUIDE.md  a2a-api-reference.md  a2a-deployment.md  a2a-examples.md  a2a-protocol.md  a2a-specification.md  adk-overview.md  adk-schema-validation.md  agent-as-tool.md  analytics-system.md  api-reference.md  callback-system.md  core-concepts.md  deployment.md  error-handling.md  examples.md  flight-booking-example.md  function-composition.md  getting-started.md  index.md  infrastructure.md  llm-callbacks.md  mcp-examples.md  mcp-performance.md  mcp-security.md  mcp-transports.md  mcp.md  memory-system.md  model-providers.md  monitoring.md  parallel-agent-execution.md  parallel-agent-tools.md  parallel-agents-api-reference.md  performance-monitoring.md  plugin-system.md  security-framework.md  security.md  sensitive-tools.md  serve.sh  (+8 more)
docs/assets/: extra.css
error-handling/: index.html
examples/: .env.example  advanced_parallel_agents_demo.py  agent_as_tool_example.py  attachment_client_example.py  attachment_demo_server.py  comprehensive_features_demo.py  demo_parallel_agents.py  enhanced_features_demo.py  enhanced_sensitive_tools_demo.py  function_tool_examples.py  guardrails_server.py  handoff_example.py  index.html  iterative_search_agent.py  langfuse_tracing_demo.py  llm_callback_example.py  mcp_client_example.py  mcp_sse_example.py  otel_tracing_demo.py  proxy_example.py  proxy_server.py  rag_example.py  sensitive_tools_demo.py  server_demo.py  server_example.py  simple_multi_agent_server.py  simple_parallel_agents_example.py  streamable_http_mcp_example.py  streaming_plain.py  test_memory_providers.py
examples/flight-booking/: README.md  advanced_multi_agent.py  index.py  jaf_server.py  multi_agent.py  test_flight_booking_manual.py  test_multi_agent_manual.py
examples/hitl-demo/: .env.example  README.md  api_demo.py  demo.py  requirements.txt  run_server.py
examples/mcp_demo/: .env.example  README.md  main.py  requirements.txt
examples/rag-demo/: .env.example  .gitignore  DEMO_SUMMARY.md  README.md  index.ts  package-lock.json  package.json  rag-agent.ts  rag-tool.ts  tsconfig.json
examples/server-demo/: .env.example  README.md  index.js  index.js.map  index.ts  package-lock.json  package.json  tsconfig.json
flight-booking-example/: index.html
function-composition/: index.html
getting-started/: index.html
infrastructure/: index.html
jaf/: __init__.py  cli.py  exceptions.py
jaf/a2a/: __init__.py  agent.py  agent_card.py  (+5 more)
jaf_python.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mcp/: index.html
mcp-examples/: index.html
mcp-transports/: index.html
memory-system/: index.html
model-providers/: index.html
monitoring/: index.html
parallel-agent-execution/: index.html
parallel-agent-tools/: index.html
parallel-agents-api-reference/: index.html
performance-monitoring/: index.html
plugin-system/: index.html
search/: search_index.json
security/: index.html
security-framework/: index.html
server-api/: index.html
session-management/: index.html
src/: index.js  index.ts
streaming-responses/: index.html
tests/: demo_callback_system.py  demo_tool_callbacks.py  run_test_server.py  test_a2a_deep.py  test_a2a_examples.py  test_api_reference_examples.py  test_attachments.py  test_callback_system_examples.py  test_coffee_tool.py  test_conversation_id_fix.py  test_deployment_examples.py  test_docs_code_examples.py  test_engine.py  test_engine_manual.py  test_error_handling_examples.py  test_getting_started_examples.py  test_manual.py  test_math_tool.py  test_mcp_comprehensive.py  test_mcp_docs.py  test_mcp_real_functionality.py  test_mcp_transports.py  test_memory_system_examples.py  test_model_providers_examples.py  test_property_based.py  test_proxy_simple.py  test_redis_fixes.py  test_redis_memory.py  test_sensitive_content.py  test_server_api_examples.py  test_session_continuity.py  test_streamable_http_mcp_example.py  test_timeout_functionality.py  test_tool_integration.py  test_validation.py
tools/: index.html
tracing/: index.html
troubleshooting/: index.html
validation/: README.md  __init__.py
validation-suite/: index.html
workflow-orchestration/: index.html
(+139 files in other folders)
